update spacing for search page again, enlarge down-arrow on homepage, fix search icon margin, and testing fade in and out effect on home page

--- a/client/js/common/directives/finalnavbar/finalnavbar.scss
+++ b/client/js/common/directives/finalnavbar/finalnavbar.scss
@@ -129,7 +129,7 @@ input:focus{
     height: 15px;
     width: 15px;
     padding-left: 2px;
-    margin-right: 30px;
+    margin-right: 40px;
 }
   
 ul.nav-menu {
@@ -367,7 +367,8 @@ a.up-arrow:after {
   content: '';
   display: block;
   position: absolute;
-  left: 48px;
+  left: 47px;
+  /*left: 48px;*/
   top: 0;
   bottom: 100%;
   width: 0;
@@ -392,7 +393,7 @@ a.up-arrow-about:after {
   content: '';
   display: block;
   position: absolute;
-  left: 43px;
+  left: 44px;
   /*left: 43%;*/
   top: 0;
   bottom: 100%;
