--- a/client/js/search/search.scss
+++ b/client/js/search/search.scss
@@ -68,22 +68,24 @@ input:focus{
 
 	ul {
 		list-style-type: disc;
-		width: 35%;
+		width: 55%;
 		margin: 0 auto;
 
 		li {
 			font-family: 'Work Sans';
-			font-size: 18px;
-			font-weight: 400;
+			font-size: 15px;
+			font-weight: lighter;
 		}
 	}
 }
 
 .left-align {
-	text-align: left;
+	/*text-align: left;*/
 	margin-left: 30px;
+	margin-bottom: 10px;
 	font-family: WorkSans;
-	font-size: 20px;
+	font-size: 15px;
+	list-style: none;
 }
 
 .giphy {
